; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-stm.c_ldeletereader.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-stm.c_ldeletereader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.boxreader = type { i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ldeletereader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ldeletereader(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.boxreader*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.boxreader* @lua_touserdata(i32* %4, i32 1)
  store %struct.boxreader* %5, %struct.boxreader** %3, align 8
  %6 = load %struct.boxreader*, %struct.boxreader** %3, align 8
  %7 = getelementptr inbounds %struct.boxreader, %struct.boxreader* %6, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  %9 = call i32 @stm_releasereader(i32* %8)
  %10 = load %struct.boxreader*, %struct.boxreader** %3, align 8
  %11 = getelementptr inbounds %struct.boxreader, %struct.boxreader* %10, i32 0, i32 1
  store i32* null, i32** %11, align 8
  %12 = load %struct.boxreader*, %struct.boxreader** %3, align 8
  %13 = getelementptr inbounds %struct.boxreader, %struct.boxreader* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @stm_releasecopy(i32* %14)
  %16 = load %struct.boxreader*, %struct.boxreader** %3, align 8
  %17 = getelementptr inbounds %struct.boxreader, %struct.boxreader* %16, i32 0, i32 0
  store i32* null, i32** %17, align 8
  ret i32 0
}

declare dso_local %struct.boxreader* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @stm_releasereader(i32*) #1

declare dso_local i32 @stm_releasecopy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
